(core) Fix poor spacing around column title when 'info' icon is present.
Summary:
- Previously, in the presence of an info icon, text would get truncated
  on the right too soon.
- Also ensure that when description is being added in Firefox, cursor is
  shown in the focused textarea.
- Removes now-unused ancient kf.editableLabel() widget.

Test Plan:
There are no changes to expected behavior, so existing tests should
suffice. The effect of CSS changes tested manually on FF and Chrome.

Reviewers: georgegevoian

Reviewed By: georgegevoian

Differential Revision: https://phab.getgrist.com/D4590

--- a/app/client/components/GridView.css
+++ b/app/client/components/GridView.css
@@ -414,15 +414,3 @@
   margin-right: 4px;
   z-index: 1;
 }
-
-.g-column-label .kf_editable_label {
-  padding-left: 1px;
-  padding-right: 1px;
-  z-index: 1;
-}
-
-.g-column-label-spacer {
-  width: calc(13px + 4px + 4px);
-  height: 17px;
-  flex-shrink: 100;
-}
